@@ -3280,13 +3280,13 @@ rxvt_term::process_csi_seq ()
             if (ch == CSI_DA)	/* secondary device attributes */
               {
                 // first parameter is normally 0 for vt100, 1 for some newer vtxxx, 'R' for rxvt,
-                // 'U' for rxvt-unicode <= 7.2, and Mm85 (e.g. 7385 for 7.3) for later versions.
+                // 'U' for rxvt-unicode != 7.[34] (where it was broken).
                 //
                 // second parameter is xterm patch level for xterm, MMmmpp (e.g. 20703) for rxvt
                 // and Mm (e.g. 72 for 7.2) for urxvt <= 7.2, and 94 for later versions, to signify
                 // that we do not support xterm mouse reporting (should be 95 when we do).
                 //
-                tt_printf ("\033[>%c%c85;94;0c", VERSION[0], VERSION[2]);
+                tt_printf ("\033[>%d;94;0c", 'U');
               }
             break;
           case '?':
@@ -3930,6 +3930,15 @@ rxvt_term::process_xterm_seq (int op, const char *str, char resp)
             allocated.push_back ((void *)res);
             set_fonts ();
           }
+        break;
+
+      case URxvt_version:
+        if (query)
+          tt_printf ("\33]%d;rxvt-unicode;%-.20s;%c;%c%c",
+                     URxvt_version,
+                     rs[Rs_name],
+                     VERSION[0], VERSION[2],
+                     resp);
         break;
 
 #if ENABLE_FRILLS
